# napari-skin-remover

./: GUIDE.md  README.md  pyproject.toml
napari_brain_peel/: _widget.py
napari_skin_remover/: __init__.py  __main__.py  _background.py  _inference.py  _io.py  _labeling.py  _reader.py  _statistics.py  _widget.py  napari.yaml
