[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-skin-remover"
version = "0.1.0"
description = "MONAI Skin-Remover napari plugin — zebrafish confocal skin removal"
requires-python = ">=3.8"
dependencies = ["napari", "torch", "monai", "tifffile", "numpy", "qtpy"]

[project.scripts]
skin-remover = "napari_skin_remover.__main__:main"

[project.entry-points."napari.manifest"]
napari-skin-remover = "napari_skin_remover:napari.yaml"

[tool.setuptools.packages.find]
where = ["."]
include = ["napari_skin_remover*"]

[tool.setuptools.package-data]
"napari_skin_remover" = ["napari.yaml"]
